# aws-credentials-switcher

./: .gitignore  .projenrc.js  Cargo.toml  Changelog.md  Readme.md  cliff.toml  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  rust-build.yml  rust-release.yml
scripts/: release.sh
src/: cli.rs  main.rs
