[package]
name = "aws-credentials-switcher"
version = "1.3.0"
authors = ["Gabriel Plassard <gabriel.plassard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
rust-ini = "0.16.1"
exitcode = "1.1.2"
structopt = "0.3.21"
log = "0.4.14"
env_logger = "0.8.3"
